--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.3",
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
     "formik": "^2.4.5",
