--- a/package.json
+++ b/package.json
@@ -1,6 +1,32 @@
 {
+  "name": "streamflix",
+  "version": "1.0.0",
+  "main": "server/main.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server/main.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ishangupta-1510/StreamX.git"
+  },
+  "author": "Ishan Gupta",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ishangupta-1510/StreamX/issues"
+  },
+  "homepage": "https://github.com/ishangupta-1510/StreamX#readme",
+  "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^8.0.3"
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.3",
+    "punycode": "^2.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
